# duckdb-miint

./: .gitmodules  CLAUDE.md  CMakeLists.txt  LICENSE  Makefile  README.md  RYPE.md  THIRD_PARTY_LICENSES.md  build.sh  extension_config.cmake  run_tests.sh  vcpkg.json
.claude/agents/: linus-code-reviewer.md
.github/workflows/: MainDistributionPipeline.yml
data/biom/: file1.biom  file2.biom  notbiom.h5  test.biom
data/bowtie2_shards/shard_a/: index.2.bt2  index.3.bt2  index.4.bt2  index.rev.2.bt2
data/bowtie2_shards/shard_b/: index.2.bt2  index.3.bt2  index.4.bt2  index.rev.2.bt2
data/fastq/: glob_sample1_R1.fq  glob_sample1_R2.fq  glob_sample2_R1.fq  glob_sample2_R2.fq  glob_single1.fq  glob_single2.fq  glob_single3.fq  sequence_with_spaces.fasta  small_a.fq  small_a_r1.fq  small_a_r2.fq  small_b.fq  small_b_r1.fq  small_b_r2.fq  small_c.fq  test.fa  test_r1.fa  test_r2.fq
data/gff/: empty.gff  test.gff
data/jplace/: empty.jplace  test.jplace  test2.jplace  with_n.jplace
data/mzml/: basic_3spectra.mzML  compressed.mzML  empty_spectra.mzML  float32.mzML  large_spectrum.mzML  missing_optional.mzML  mixed_precision.mzML  no_index.mzML  nonstandard_array.mzML  orphan_ms2.mzML  param_groups.mzML  with_chromatograms.mzML  zero_intensity.mzML
data/newick/: simple.nwk  simple2.nwk  with_edge_ids.nwk
data/rype/: test.ryidx  test_refs.fasta
data/rype/test.ryxdi/: buckets.parquet  manifest.toml
data/rype/test.ryxdi/inverted/: shard.0.parquet
data/sam/: foo_empty_has_header.sam  foo_has_header.bam  foo_has_header.sam  foo_has_header_2.bam  foo_has_header_2.sam  foo_large_positions.bam  foo_large_positions.sam  foo_mixed_seqqual.sam  foo_no_header.sam  foo_no_header_2.sam  foo_no_tags.sam  foo_unmapped_no_seq.sam  foo_with_seqqual.sam  foo_with_seqqual_phred64.sam  foo_with_tags.bam  foo_with_tags.sam  miint-woltka-test.parquet  negative_tags.sam  partial_header.sam  ubam_no_sq.sam  ubam_no_sq_2.sam
data/sff/: adapter_only_clip.sff  bad_clip.sff  bad_magic.sff  bad_seq_len.sff  bad_version.sff  basic_2reads.sff  empty.sff  many_reads.sff  no_clip.sff  overclaimed_reads.sff  overlapping_clips.sff  single_read.sff  trimmed.sff  truncated_read.sff  with_index.sff
data/shards/: shard_a.mmi  shard_b.mmi
src/: BIOMReader.cpp  BIOMTable.cpp  Bowtie2Aligner.cpp  IntervalCompressor.cpp  Minimap2Aligner.cpp  MzMLBinaryDecoder.cpp  MzMLReader.cpp  NewickTree.cpp  QualScore.cpp  SAMReader.cpp  SFFReader.cpp  SequenceReader.cpp  WFA2Aligner.cpp  align_bowtie2.cpp  align_bowtie2_sharded.cpp  align_minimap2.cpp  align_minimap2_sharded.cpp  align_pairwise_functions.cpp  alignment_flag_functions.cpp  alignment_functions.cpp  compress_intervals.cpp  copy_biom.cpp  copy_fasta.cpp  copy_fastq.cpp  copy_format_common.cpp  copy_newick.cpp  copy_sam.cpp  miint_extension.cpp  ncbi_client.cpp  ncbi_parser.cpp  parse_newick.cpp  placement_table_reader.cpp  read_alignments.cpp  read_biom.cpp  read_fastx.cpp  read_mzml.cpp  read_mzml_chromatograms.cpp  read_ncbi.cpp  read_ncbi_annotation.cpp  read_ncbi_fasta.cpp  (+13 more)
src/include/: BIOMReader.hpp  BIOMTable.hpp  Bowtie2Aligner.hpp  IntervalCompressor.hpp  Minimap2Aligner.hpp  MzMLBinaryDecoder.hpp  MzMLReader.hpp  NewickTree.hpp  QualScore.hpp  SAMReader.hpp  SAMRecord.hpp  SFFReader.hpp  SequenceReader.hpp  SequenceRecord.hpp  WFA2Aligner.hpp  align_bowtie2.hpp  align_bowtie2_sharded.hpp  align_common.hpp  align_minimap2.hpp  align_minimap2_common.hpp  align_minimap2_sharded.hpp  align_pairwise_functions.hpp  align_result_utils.hpp  alignment_flag_functions.hpp  alignment_functions.hpp  alignment_functions_internal.hpp  compress_intervals.hpp  copy_biom.hpp  copy_fasta.hpp  copy_fastq.hpp  copy_format_common.hpp  copy_newick.hpp  copy_sam.hpp  miint_extension.hpp  miint_macros.hpp  ncbi_client.hpp  ncbi_parser.hpp  parse_newick.hpp  placement_table_reader.hpp  read_alignments.hpp  (+21 more)
test/cpp/: test_AlignmentFunctions.cpp  test_BIOMReader.cpp  test_BIOMTable.cpp  test_Bowtie2Aligner.cpp  test_InsertFullyResolved.cpp  test_IntervalCompressor.cpp  test_Minimap2Aligner.cpp  test_MzMLBinaryDecoder.cpp  test_MzMLReader.cpp  test_NewickParser.cpp  test_QualScore.cpp  test_SAMReader.cpp  test_SFFReader.cpp  test_SequenceReader.cpp  test_WFA2Aligner.cpp  test_ncbi_client.cpp  verify_sparse_conversion.py
test/shell/: parse_newick_stdin.sh  read_alignments_stdin.sh  read_fastx_stdin.sh  read_newick_stdin.sh
test/sql/: align_bowtie2.test  align_bowtie2_sharded.test  align_minimap2.test  align_minimap2_sharded.test  align_pairwise.test  alignment_flags.test  alignment_functions.test  bowtie2_available.test  compress_intervals.test  copy_bam.test  copy_biom.test  copy_buffering.test  copy_fasta.test  copy_fasta_compression.test  copy_fastq.test  copy_fastq_compression.test  copy_newick.test  copy_newick_placements.test  copy_sam.test  copy_sam_compression.test  genome_coverage.test  glob_read_alignments.test  glob_read_biom.test  glob_read_fastx.test  glob_read_sequences_sam.test  miint_version.test  mzml_macros.test  parse_newick.test  read_alignments.test  read_biom.test  read_biom_performance.test  read_fastx.test  read_fastx_qual_offset.test  read_fastx_sequence_index.test  read_gff.test  read_jplace.test  read_mzml.test  read_mzml_chromatograms.test  read_ncbi.test  read_ncbi_annotation.test  (+13 more)
